--- a/SportsConnect/CSS/find_player_pl.css
+++ b/SportsConnect/CSS/find_player_pl.css
@@ -1,57 +1,13 @@
-
+:root {
+    --primary-color: #1b2330;
+    --font-size: 16px;
+    --primary-back-color:rgb(245, 245, 245);
+}
 *{
     margin: 0%;
     padding: 0%;
-    font-family: "Urbanist", sans-serif;
-}
-.navbar{
-    width: 100%;
-    background-color: #292626;
-    display: flex;
-    justify-content: space-between;
-    overflow: visible;
-}
-.nav2{
-    display: flex;
-    align-items: center;
-    position: relative;
-    overflow: visible;
-}
-.logo{
-    height: 60px;
-    width: px;
-    margin-left: 10px;
-    display: flex;
-    align-items: center;
-}
-.logo img{
-    height: 60px;
-    width: 69.43px;
-}
-.label{
-    font-style: italic;
-    height: 19.2px;
-    width: 132.91px;
-    font-weight: 500;
-    margin-left: 5px;
-    color: white;
-}
-.navlist{
-    display: flex;
-    list-style: none;
-    align-items: center;
-    margin-right: 15px;
-}
-.navlist li{
-    margin-left: 10px;
-    margin-right: 5px;
-}
-.navlist li a{
-    text-decoration: none;
-    color:white;
-}
-.navlist li a:hover{
-    color: rgb(255, 98, 0);
+    font-family: "Oswald", sans-serif;
+    background-color: var(--primary-back-color);
 }
 .search_sec{
     display: flex;
@@ -66,7 +22,7 @@
     margin-top: 50px;
     padding: 10px;
     border-radius: 30px;
-    background-color: rgb(211, 203, 203);
+    background-color: white;
 }
 #player{
     margin-left: 5px;
@@ -75,30 +31,34 @@
     outline: none;
     border: none;
     font-size: 18px;
-    background-color: rgb(211, 203, 203);
+    background-color: white;
 }
 #player::placeholder{
     font-family: "Urbanist", sans-serif;
 }
 .player_details{
     padding: 10px 100px 10px 100px;
+    margin-top: 40px;
 }
 #player_list{
     display: flex;
     list-style: none;
     flex-wrap: wrap;
+    /* justify-content: space-around; */
 }
 #player_list .player_list_item{
-    height: 250px;
+    height: 305px;
     width: 300px;
-    background-color: #afacac;
+    background-color: white;
     margin-right: 15px;
-    border-radius: 20px;
+    border-radius: 12px;
     padding: 10px;
 }
 .player_card_con{
     display: flex;
     flex-direction: column;
+    padding: 10px;
+    border-radius: 5px;
 }
 .player_card_con .upper{
     display: flex;
@@ -126,3 +86,75 @@
     margin-top: 10px;
     border: 2px solid white;
 }
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24;
+  background-color: white;
+}
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+.view-addfriend-button-div{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 5px;
+}
+.view-addfriend-button-div>div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: red;
+    padding: 1px 5px 1px 5px;
+    transition: 0.6s;
+    border-radius: 5px;
+}
+.view-addfriend-button-div>div>span{
+    background-color: red;
+    color: var(--primary-color);
+    transition: 0.6s;
+
+}
+.view-addfriend-button-div>div>button{
+    background-color: red;
+    border: none;
+    font-size: 15px;
+    font-weight: 500;
+    padding: 7px;
+    transition: 0.6s;
+}
+.view-addfriend-button-div>div:hover span,
+.view-addfriend-button-div>div:hover button{
+    background-color: #1b2330;
+    color: white;
+    cursor: pointer;
+}
+.view-addfriend-button-div>div:hover{
+    background-color: #1b2330;
+    color: white;
+    cursor: pointer;
+}
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
+
+
